Team Search: Fix horizontal overflowing with long team names

--- a/app/features/team/team.css
+++ b/app/features/team/team.css
@@ -20,6 +20,7 @@
 .team-search__team__name {
   font-size: var(--fonts-xl);
   font-weight: var(--bold);
+  word-break: break-word;
 }
 
 .team-search__team__members {
